--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -1,7 +1,11 @@
 {
   "name": "0x00-ES6_basic",
   "version": "1.0.0",
-  "description": "",
+  "description": "ES6 Basics project",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Desheye/alx-backend-javascript"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,10 +20,10 @@
     "@babel/node": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "babel": "^6.23.0",
-    "eslint": "^9.5.0",
     "jest": "^29.7.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "eslint": "^9.5.0"
   }
 }
